# mevzuatgpt-server

./: .env  .env.example  .env.local  .gitignore  .replit  API_DOSYA_KARSILASTIRMA.md  API_ENDPOINTS_KULLANICI.md  API_KEYS_REQUIREMENTS.md  CELERY_WORKER_COMMAND.md  Destek-System.postman_collection.json  FEEDBACK_SYSTEM_README.md  Feedback-System.postman_collection.json  POSTMAN_FEEDBACK_TEST.md  RLS_KURULUM_REHBERI.md  SEARCH_HISTORY_ENDPOINTS.md  SUPPORT_SYSTEM_STATUS.md  VPS_DEPLOYMENT_GUIDE.md  add_category_column.sql  add_missing_columns.sql  add_search_history_columns.sql  add_test_credits.py  alembic.ini  app.py  auth_bypass_implementation.py  auth_status_summary.sql  bypass_credits.py  clean_selfhosted_schema.sql  clear_elasticsearch.py  clear_elasticsearch_embeddings.py  clear_elasticsearch_simple.py  client_env.local  client_next.config.js  corrected_metadata.json  create_missing_tables.sql  create_tables_via_python.py  create_test_admin.py  create_test_pdf.py  debug_database_connection.py  debug_search.py  deep_diagnosis.py  (+94 more)
alembic/: env.py
api/: __init__.py  dependencies.py  public_routes.py
attached_assets/: Pasted--26-16-50-08-apps-systemd-1-mevzuat-api-service-Failed-with-result-resources-Aug-26-16-50-08-a-1756227030694_1756227030695.txt  Pasted--Bulk-create-completed-45-total-embeddings-created-2025-08-20-17-19-11-288-INFO-ForkPoolWorker-1--1755710385208_1755710385209.txt  Pasted--KULLANICI-PROF-LLER-TABLOSU--1754655004819_1754655004820.txt  Pasted--success-true-data-document-info-id-f63d3fe2-1041-4b7-1755756342209_1755756342210.txt  (+17 more)
core/: config.py  (+4 more)
(+150 files in other folders)
