[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mevzuatgpt"
version = "1.0.0"
description = "Production-ready RAG system for legal document processing and search"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.3",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.12.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "openai>=1.99.1",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "aiohttp>=3.9.0",
    "pypdf2>=3.0.1",
    "langchain>=0.0.350",
    "langchain-text-splitters>=0.0.1",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "python-json-logger>=3.3.0",
    "psycopg2-binary>=2.9.10",
    "pgvector>=0.4.1",
    "email-validator>=2.2.0",
    "supabase>=2.18.0",
    "pdfplumber>=0.11.7",
    "httpx>=0.28.1",
    "groq>=0.31.0",
    "elasticsearch>=9.1.0",
]

[tool.setuptools.packages.find]
include = ["api*", "core*", "models*", "services*", "tasks*", "utils*"]
exclude = ["tests*", "alembic*", "attached_assets*"]

[tool.setuptools]
package-dir = {"" = "."}

[project.scripts]
mevzuatgpt-server = "app:main"
mevzuatgpt-worker = "app:run_celery_worker"
